--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@ $mobile-sm: 380px;
 $mobile-md: 420px;
 $mobile-lg: 480px;
 $tablet-sm: 576px;
+$tablet-catalog: 660px;
 $tablet-slider: 678px;
 $tablet-nav: 760px;
 $tablet-md: 768px;
