--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -17,10 +17,14 @@
   --color-grey: #f2f2f2;
   --color-grey-2: #666;
   --color-dark-grey: #444;
+  --color-dark-grey-30: #44444430;
+  --color-catalog-last-title: #111;
+  --color-catalog-title: #222;
   --color-light-grey: #d9d9d9;
   --color-grey-border: #e6e6e6;
   --color-grey-background: #eaeaea;
   --color-special-grey: #cdcdcd;
+  --color-special-grey-2: #ebebeb;
   --color-grey-track: #dcdcdc;
   --color-grey-background-tablet: #eaeaea;
 }
