--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -24,3 +24,27 @@
   line-height: 20px;
   text-transform: uppercase;
 }
+
+@mixin green-button {
+  @include font-oswald;
+
+  padding: 10px 53px;
+  min-height: 40px;
+  font-size: 16px;
+  color: var(--color-white);
+  background-color: var(--color-green);
+  transition:
+    background-color 0.3s ease-in-out,
+    color 0.3s ease-in-out;
+
+  &:focus,
+  &:hover {
+    outline: transparent;
+    background-color: var(--color-green-2);
+  }
+
+  &:active {
+    color: var(--color-white-30);
+    background-color: var(--color-green-2);
+  }
+}
