--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,5 +2,5 @@
 @use './components/header';
 @use './components/map';
 @use './components/footer';
-@use './components/home';
-@use './components/catalog';
+@use './components/home-page';
+@use './components/catalog-page';
