feat: add a form section to the Programs page

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -103,5 +103,10 @@
         background-color: var(--color-green);
       }
     }
+
+    @media (max-width: variables.$mobile-lg) {
+      width: 100%;
+      justify-content: space-between;
+    }
   }
 }
